syntax = "proto3";

package org.openmcf.provider.cloudflare.cloudflarednszone.v1;

import "buf/validate/validate.proto";
import "org/openmcf/provider/cloudflare/cloudflarednszone/v1/spec.proto";
import "org/openmcf/provider/cloudflare/cloudflarednszone/v1/stack_outputs.proto";
import "org/openmcf/shared/metadata.proto";

// cloudflare-dns-zone
message CloudflareDnsZone {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'cloudflare.openmcf.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'CloudflareDnsZone'];

  //metadata
  org.openmcf.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  CloudflareDnsZoneSpec spec = 4 [(buf.validate.field).required = true];

  //status
  CloudflareDnsZoneStatus status = 5;
}

// cloudflare-dns-zone status
message CloudflareDnsZoneStatus {
  //stack-outputs
  //  cloudflare-dns-zone stack-outputs
  CloudflareDnsZoneStackOutputs outputs = 1;
}
